Transcript Overflow bug fix

--- a/frontend/src/components/TimeStamp.module.css
+++ b/frontend/src/components/TimeStamp.module.css
@@ -1,3 +1,10 @@
+.component{
+    display:flex;
+    flex-direction: row;
+    gap: 0.5vh;
+}
+
+
 .component button{
     border-color: black;
     background-color:gray;
